# rep2recall-web

./: .gitignore  README.md  api.md  connect.sh  package.json  pyproject.toml  tsconfig.electron.json  tsconfig.json  tsconfig.node.json  tsconfig.web.json  webpack.common.js  webpack.dev.js  webpack.electron.js  webpack.prod.js
.profile.d/: ssh-setup.sh
docs/: api.md  search.md
public/: index.html
py/: config.py
py/migration/: 00_init_index.py  01_default_user.py  conn.py
src/: declaration.d.ts
src/backend/: server.ts
src/backend/db/: MongoQParser.ts  SearchResource.ts  anki.ts  index.ts
src/backend/loki/: index.ts
src/backend/middleware/: needUserId.ts
src/backend/route/: deck.ts  io.ts  media.ts  quiz.ts
src/migration/: 00-init-index.ts  01-add-user.ts
src/node/: config.ts  electron.ts  server.ts  tsconfig.json  util.ts
src/node/api/: auth.ts  editor.ts  index.ts  io.ts  media.ts  quiz.ts
src/node/auth/: auth0.ts  token.ts
src/node/engine/: anki.ts  db.ts  export.ts  search.ts  util.ts
src/node/middleware/: needUserId.ts
src/server/db/: SearchResource.ts  index.ts
src/server/middleware/: needUserId.ts  secured.ts
src/server/route/: cardEditor.ts  deck.ts  quiz.ts  template.ts
src/web/: Front.ts  ImportExport.ts  MongoSearchParser.ts  cardEditor.ts  deckViewer.ts  index.scss  index.ts  util.ts
src/web/DbEditor/: DbEditor.ts
src/web/Quiz/: QuizArea.ts  shared.ts
src/web/dbEditor/: dbEditor.scss  dbEditor.ts  shared.ts
src/web/editor/: EditorUi.ts  EntryEditor.ts  MarkdownEditor.ts  (+1 more)
views/: index.njk
views/layout/: min.ejs
(+26 files in other folders)
