[tool.poetry]
name = "rep2recall-web"
version = "0.1.0"
description = ""
authors = ["patarapolw <patarapolw@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pymongo = "^3.7"
python-dotenv = "^0.10.1"
pylint = "^2.3"
dnspython = "^1.16"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
